--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       content="Predictor de disponibilidad de bicis de la Ciudad de Buenos Aires"
     />
 
+    <link rel="icon" type="image/png" href="favicon.png">
     <title>Bicis BA</title>
   </head>
   <body>
